fix(example-site): navigation vert. spacing tweaks

--- a/site/documents/index/static/styles.css
+++ b/site/documents/index/static/styles.css
@@ -107,8 +107,8 @@ body {
   margin: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-bottom: calc(4 * var(--grid-gap));
-  padding-top: calc(2 * var(--grid-gap));
+  padding-bottom: calc(1 * var(--grid-gap));
+  padding-top: calc(1 * var(--grid-gap));
   line-height: var(--line-height);
   color: var(--text-color);
   background-color: var(--bg-color);
@@ -313,7 +313,7 @@ header {
 }
 
 h1 {
-  margin-top: calc(1 * var(--grid-gap));
+  margin-top: calc(2 * var(--grid-gap));
   margin-bottom: 0;
 }
 
@@ -523,7 +523,7 @@ pre code {
 }
 
 .nav-document-actions {
-  margin-top: calc(1 * var(--grid-gap));
+  margin-top: calc(2 * var(--grid-gap));
 }
 
 .nav-document-actions > ul.inline-list-spread {
